# TwitchWordFinder

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/twitchWordFinder/: __main__.py
