[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "twitchWordFinder"
version="2.0.0+snapshot25w18a"
authors = [
  {name="TheCrunching"}
]
description = "Searches twitch chat for word."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["twitch_chat_irc"]

[project.scripts]
TwitchChatWordFinder = "twitchWordFinder.__main__:main()"
